[package]
name = "pjs"
version = "0.1.3"
authors = ["Ryan Thomas <ryan@ryant.org>"]
edition = "2018"
description = "Pretty print JSON"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
keywords = ["cli", "json", "tool"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33"
serde_json = "1.0"
